--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ main{
 }
 
 .hero{
-    height: 800px;
+    height: 50em;
     width: 100%;
     background-image: linear-gradient(to right, hsla(234, 59%, 28%, 0.5), hsla(202, 56%, 49%, 0.5)), url(img/pexels-negative-space-160107.jpg);
     background-size: cover;
@@ -89,7 +89,7 @@ main{
 }
 
 .hero__main{
-    height: 745.62px;
+    height: 46.6013em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -296,7 +296,7 @@ main{
 
 .contact{
     display: flex;
-    margin-bottom: 12.5em;
+    margin-bottom: 11.5em;
     flex-wrap: wrap;
 }
 
@@ -503,7 +503,7 @@ footer{
     .contact__hero{
         margin: auto;
         width: 80%;
-        margin-top: 5em;
+        margin-top: 1.7em;
     }
 }
 
