--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 /* <---- CORE ----> */
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700;900&display=swap');
+
 :root{
     --color-primary: #fff;
     --color-secondary: #3b4eb9;
@@ -16,7 +18,7 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nunito', sans-serif;
     scroll-behavior: smooth;
 }
 
@@ -38,7 +40,7 @@ main{
 
 .title{
     text-align: center;
-    font-size: 2.8em;
+    font-size: 2.6em;
     font-weight: 900;
     color: var(--color-secondary);
     padding: 2.7em 0;
@@ -59,7 +61,7 @@ main{
 
 .menu ul li{
     list-style: none;
-    font-size: 1.125em;
+    font-size: 1em;
     padding: 0.625em;
 }
 
@@ -99,27 +101,33 @@ main{
     text-align: center;
     position: relative;
     z-index: 10;
+    opacity: 0;
+    transition: opacity .5s linear;
+}
+
+.active{
+    opacity: 1 !important;
 }
 
 .text-container__main{
     color: var(--color-primary);
-    font-size: 3.75em;
-    margin-bottom: 10px;
+    font-size: 3.5em;
+    margin-bottom: 5px;
     letter-spacing: 2px;
     font-weight: 600;
 }
 
 .text-container__info{
     color: var(--color-primary);
-    font-size: 1.5em;
-    margin-bottom: 1.25em;
+    font-size: 1.3em;
+    margin-bottom: 1em;
     font-weight: 300;
     letter-spacing: 0.0625em;
 }
 
-.btn{
+.main-btn{
     display: inline-block;
-    font-size: 1.3em;
+    font-size: 1.1em;
     line-height: 2.4em;
     width: 8.8em;
     height: 2.4em;
@@ -133,7 +141,7 @@ main{
     box-shadow: 10px 10px 24px -21px rgba(0,0,0,0.75);
 }
 
-.btn:hover{
+.main-btn:hover{
     background: var(--link);
     color: var(--text-primary);
 }
@@ -155,6 +163,8 @@ main{
     justify-content: space-evenly;
     width: 100%;
     margin-bottom: 12.5em;
+    opacity: 0;
+    transition: opacity .3s linear .3s;
 }
 
 .service{
@@ -169,7 +179,7 @@ main{
 }
 
 .service__title{
-    font-size: 1.375em;
+    font-size: 1.175em;
     margin: 0.625em 0;
     letter-spacing: 1px;
     color: var(--text-primary);
@@ -186,7 +196,7 @@ main{
 .service__btn{
     color: var(--color-secondary);
     border: 1px solid var(--color-secondary);
-    font-size: 1.125em;
+    font-size: 1em;
     padding: 0.5em 0.9375em;
     border-radius: 5px;
     transition: all .3s ease;
@@ -228,6 +238,8 @@ main{
     align-items: center;
     margin-bottom: 8.125em;
     padding: 0 3.125em;
+    opacity: 0;
+    transition: opacity .3s linear .3s;
 }
 
 .about-us__cont--reverse{
@@ -253,16 +265,16 @@ main{
 }
 
 .about-us__main{
-    font-size: 2.625em;
+    font-size: 2.4em;
     letter-spacing: 2px;
     color: var(--text-primary);
     margin-bottom: 5px;
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .about-us__copy{
     line-height: 1.5;
-    font-size: 1.25em;
+    font-size: 1em;
     color: var(--copy);
     letter-spacing: 1px;
     font-weight: 300;
@@ -306,11 +318,13 @@ main{
     justify-content: space-around;
     padding: 0 1.25em 0 3em;
     height: 31.25em;
+    opacity: 0;
+    transition: opacity .3s linear .3s;
 }
 
 .contact__icon{
     text-align: center;
-    font-size: 2.6em;
+    font-size: 2em;
     padding: 0.4em;
     border-radius: 50%;
     color: var(--color-primary);
@@ -325,19 +339,21 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    opacity: 0;
+    transition: opacity .3s linear .3s;
 }
 
 .copy__main{
-    font-size: 1.7em;
+    font-size: 1.5em;
     font-weight: 600;
     letter-spacing: 0.8px;
-    margin-bottom: 0.625em;
+    margin-bottom: 0.4em;
     color: #000;
     
 }
 
 .copy__info{
-    font-size: 1.4em;
+    font-size: 1.2em;
     color: var(--text-secondary);
 }
 
@@ -357,7 +373,7 @@ main{
 
 footer{
     width: 100%;
-    background-color: #222;
+    background-color: #1c1c1c;
 }
 
 .foot{
@@ -378,7 +394,7 @@ footer{
 }
 
 .foot__title{
-    font-size: 2.2em;
+    font-size: 2em;
     font-weight: 900;
     letter-spacing: 0.8px;
     margin-bottom: 0.3em;
@@ -399,7 +415,7 @@ footer{
 
 .foot__under{
     width: 100%;
-    height: 1.5em;
+    height: 1em;
     background-color: #313757;
     position: absolute;
     bottom: 0;
@@ -423,7 +439,7 @@ footer{
 }
 
 .main__icon{
-    font-size: 1.5em;
+    font-size: 1.3em;
     color: var(--color-secondary);
     margin-right: 0.3em;
     position: relative;
@@ -431,7 +447,7 @@ footer{
 }
 
 .foot__subtitle{
-    font-size: 1.5em;
+    font-size: 1.3em;
     letter-spacing: 0.8px;
     color: var(--color-primary);
     margin-bottom: 0.3em;
@@ -460,7 +476,7 @@ footer{
     color: #aaa;
     margin-bottom: 0.625em;
     letter-spacing: 0.8px;
-    font-size: 1.125em;
+    font-size: 1em;
 }
 
 .social{
@@ -471,7 +487,7 @@ footer{
 
 .link{
     color: var(--color-primary);
-    font-size: 2.4em;
+    font-size: 2.2em;
     padding: 0 0.2em;
     border-radius: 5px;
     transition: all .3s ease;
@@ -522,6 +538,10 @@ footer{
     .service{
         width: 90%;
         margin-bottom: 30px;
+    }
+
+    .service__img{
+        width: 70%;
     }
 
     .about-us__cont{
