--- a/style.css
+++ b/style.css
@@ -370,6 +370,61 @@ main{
     object-fit: contain;
 }
 
+/* <---- GALLERY ----> */
+
+#galeria{
+    width: 100%;
+    background-color: var(--color-primary);
+}
+
+.gallery{
+    width: 90%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 100px;
+    opacity: 0;
+    transition: opacity .3s linear .3s;
+}
+
+.gallery__img{
+    width: 29%;
+    object-fit: cover;
+    margin-bottom: 40px;
+    position: relative;
+}
+
+.gallery__img:hover{
+    opacity: .7;
+}
+
+.gallery__img > img{
+    width: 100%;
+    height: 100%;
+}
+
+.img__hover{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+}
+
+.img__hover:hover{
+    opacity: 1;
+}
+
+.img__hover > a > i{
+    font-size: 40px;
+    color: var(--color-primary);
+}
+
 /* <---- FOOTER ----> */
 
 footer{
@@ -585,6 +640,10 @@ footer{
     .service__copy{
         font-size: 16px;
     }
+
+    .gallery__img{
+        width: 42%;
+    }
 }
 
 @media screen and (max-width: 576px){
@@ -641,6 +700,10 @@ footer{
 
     .about-us__text{
         width: 100%;
+    }
+
+    .gallery__img{
+        width: 70%;
     }
 }
 
